[package]
name = "rustaxa-bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "lib"]

[dependencies]
cxx = "1.0"
rustaxa-vdf = { path = "../rustaxa-vdf" }
rustaxa-storage = { path = "../rustaxa-storage" }
anyhow = "1.0.100"
ethereum-types = "0.16.0"

[build-dependencies]
cxx-build = "1.0"
