[package]
name = "rustaxa-vdf"
version = "0.1.0"
edition = "2024"

[dependencies]
rug = "1.27.0"

[dev-dependencies]
rand = "0.8"
rand_chacha = "0.3"
criterion = "0.5"
proptest = "1.0"
rayon = "1.7"

[[bench]]
name = "hash_to_prime"
harness = false

[[bench]]
name = "vdf_operations"
harness = false

[[bench]]
name = "puzzle_operations"
harness = false
